<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorMain"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif"
        android:text="@string/login"
        android:textColor="@color/colorWhite"
        android:textSize="34sp"
        android:layout_marginTop="80dp"/>

    <TextView
        android:id="@+id/txtToContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="60dp"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/toContinue"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        android:letterSpacing="0.3"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingEnd="40dp"
        android:paddingStart="40dp"
        android:layout_gravity="center|center_vertical">

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="email"
            android:singleLine="true"
            android:inputType="textEmailSubject"
            android:textColorHint="@color/colorWhite"
            android:backgroundTint="@color/colorWhite"
            android:textColor="#FFFFFF"/>

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="password"
            android:inputType="textPassword"
            android:textColorHint="@color/colorWhite"
            android:backgroundTint="@color/colorWhite"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/btnLogIn"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:textColor="@color/colorMain"
            android:layout_gravity="center"
            android:text="@string/logIn"
            android:textSize="16sp"
            android:background="@color/colorWhite"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:layout_marginTop="50dp"/>

        <Button
            android:id="@+id/btnCreat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:textColor="@color/colorWhite"
            android:text="@string/creatAccount"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>
        
    </LinearLayout>


</LinearLayout>